# simple-sf

./: .gitignore  CLAUDE.md  Dockerfile  MEMORY_AUDIT_REPORT.md  MEMORY_AUDIT_SUMMARY.txt  Package.swift  QUICK_REFERENCE.md  README.md  README_MEMORY_AUDIT.md  STRINGS_EXTRACTION_SUMMARY.txt  STRINGS_INVENTORY.json  USER_FACING_STRINGS_REPORT.md  docker-compose.yml
SFEngine/: Cargo.toml
SFEngine/examples/: pacman_mission.rs
SFEngine/include/: sf_engine.h
SFEngine/src/: agents.rs  bench.rs  catalog.rs  db.rs  engine.rs  eval.rs  executor.rs  ffi.rs  guard.rs  ideation.rs  indexer.rs  lib.rs  llm.rs  protocols.rs  sandbox.rs  tools.rs
SFEngine/src/a2a/: bus.rs  mod.rs  negotiation.rs
SFEngine/src/arch/: clean.rs  cqrs.rs  ddd.rs  events.rs  mod.rs  service_mesh.rs
SFEngine/src/cache/: mod.rs
SFEngine/src/db/: locks.rs  migrations.rs  mod.rs  tenant.rs
SFEngine/src/design_patterns/: decorator.rs  mod.rs  patterns.rs  proxy.rs
SFEngine/src/engine/: build.rs  discussion.rs  mission.rs  mod.rs  patterns.rs  patterns_collab.rs  patterns_competition.rs  patterns_distributed.rs  patterns_ext.rs  patterns_fractal.rs  phase.rs  resilience.rs  types.rs  workflow.rs
SFEngine/src/eval/: eval_metrics.rs  eval_runner.rs
SFEngine/src/indexer/: index_store.rs  index_walker.rs
SFEngine/src/mcp/: mod.rs  protocol.rs  server.rs
SFEngine/tests/: ac_bench.rs  chaos.rs  eval_tests.rs  integration.rs  live_e2e.rs  pacman.rs  workflow_e2e.rs
SimpleSFServer/: Cargo.toml
SimpleSFServer/src/: auth.rs  chat.rs  db.rs  ideation.rs  llm.rs  main.rs  models.rs  projects.rs
(+182 files in other folders)
