[package]
name = "sf-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
name = "sf_engine"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
